--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,151 @@
-/*
-
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
-
-If your plugin does not need CSS, delete this file.
-
-*/
+  div {
+    /* Making sure the dialog is not displayed over the text */
+    clear: both;
+  }
+  
+  ul.chat-dialog {
+    overflow: hidden; /* Contain floated children without traditional clearfix */
+    margin-top: var(--size-4-9);
+    margin-bottom: var(--size-4-9);
+  
+    padding-inline-start: 0px;
+    padding-left: var(--size-4-9);
+    padding-right: var(--size-4-9);
+  }
+  
+  .is-mobile ul.chat-dialog {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  
+  ul.chat-dialog li {
+    display: flex;
+    flex-direction: column;
+    clear: both;
+    margin-bottom: 0px;
+    margin-top: var(--size-2-1);
+    padding-bottom: 0px;
+    padding-top: 0px;
+  }
+  
+  ul.chat-dialog li p {
+    max-width: calc(100% - 50px);
+  }
+  
+  ul.chat-dialog li .dialog-meta {
+    display: inline;
+    padding: 0px 0px;
+    margin: 0px;
+    font-size: var(--font-smallest);
+  }
+  
+  ul.chat-dialog li .dialog-meta {
+    font-size: var(--font-smallest);
+    padding: 0px var(--size-2-2);
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+  
+  ul.chat-dialog li .dialog-comment {
+    font-style: italic;
+  }
+  
+  li .dialog-speaker+.dialog-comment::before {
+    content: " ";
+  }
+  
+  li .dialog-speaker+.dialog-comment::after {
+    content: ")";
+  }
+  
+  ul.chat-dialog li .dialog-statement {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding: var(--size-4-1) var(--size-4-3);
+    border-radius: var(--radius-s);
+    width: fit-content;
+  }
+  
+  ul.chat-dialog li.their-dialog .dialog-meta {
+    padding-left: var(--size-4-2);
+  }
+  
+  ul.chat-dialog li.my-dialog .dialog-meta {
+    padding-right: var(--size-4-2);
+  }
+  
+  ul.chat-dialog li.their-dialog.emoji-only .dialog-statement, ul.chat-dialog li.my-dialog.emoji-only .dialog-statement {
+    background-color: transparent;
+    padding: 0px;
+    font-size: 2em;
+    line-height: 1em;
+  }
+  
+  ul.chat-dialog li.their-dialog .dialog-statement {
+    background: var(--color-base-30);
+    color: var(--color-base-100);
+    border-top-right-radius: var(--radius-xl);
+    border-bottom-right-radius: var(--radius-xl);
+  }
+  
+  ul.chat-dialog li.my-dialog {
+    text-align: right;
+    align-items: flex-end;
+  }
+  
+  ul.chat-dialog li.my-dialog .dialog-statement {
+    background: var(--interactive-accent);
+    color: var(--text-on-accent);
+    border-top-left-radius: var(--radius-xl);
+    border-bottom-left-radius: var(--radius-xl);
+  }
+  
+  .my-dialog+.their-dialog .dialog-statement,
+  .their-dialog+.my-dialog .dialog-statement {
+    margin-top: var(--size-4-1);
+  }
+  
+  .my-dialog+.their-dialog .dialog-meta+.dialog-statement,
+  .their-dialog+.my-dialog .dialog-meta+.dialog-statement {
+    margin-top: 0px;
+  }
+  
+  .their-dialog+.my-dialog .dialog-statement {
+    border-top-right-radius: var(--radius-xl);
+  }
+  
+  .my-dialog+.their-dialog .dialog-statement,
+  .their-dialog.end-speech+.their-dialog .dialog-statement {
+    border-top-left-radius: var(--radius-xl);
+  }
+  
+  .my-dialog.end-speech .dialog-statement {
+    border-bottom-right-radius: var(--radius-xl);
+  }
+  
+  .their-dialog.end-speech .dialog-statement {
+    border-bottom-left-radius: var(--radius-xl);
+  }
+  
+  .chat-dialog li:nth-child(1 of .my-dialog) .dialog-statement {
+    border-top-right-radius: var(--radius-xl);
+  }
+  
+  .chat-dialog li:nth-child(1 of .their-dialog) .dialog-statement {
+    border-top-left-radius: var(--radius-xl);
+  }
+  
+  .chat-dialog li:nth-last-child(1 of .their-dialog) .dialog-statement {
+    border-bottom-left-radius: var(--radius-xl);
+    margin-bottom: 1em;
+  }
+  
+  .chat-dialog li:nth-last-child(1 of .my-dialog) .dialog-statement {
+    border-bottom-right-radius: var(--radius-xl);
+    margin-bottom: 1em;
+  }
+  
+  .chat-dialog li:nth-last-child(1 of .their-dialog) .dialog-statement {
+    border-bottom-left-radius: var(--radius-xl);
+    margin-bottom: 1em;
+  }
